# Symposion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  pytest.yml
docs/: ARCHITECTURE.md  PLAN.md  _config.yml  action-pipelines.md  architecture.md  index.md  intent-taxonomy.md  roadmap.md
docs/agents/: athen.md  clio.md  daed.md  heph.md  herm.md  met.md  nem.md
schemas/: message.schema.json  task.schema.json
scripts/: run_demo.py
symposion/: __init__.py  models.py
symposion/agents/: __init__.py  athen.py  base.py  clio.py  daed.py  heph.py  herm.py  met.py  nem.py
symposion/core/: messaging.py  orchestrator.py  registry.py
symposion/protocol/: __init__.py  intent.py  taxonomy.py  validate.py
symposion/utils/: ids.py  logging.py
tests/: test_protocol_enforcement.py  test_schema_smoke.py
