[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symposion"
version = "0.1.0"
description = "A collaborative, role-based multi-agent framework"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["symposion*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]